[gd_scene load_steps=3 format=3]

[ext_resource path="res://src/tests/EventBusHarness.gd" type="Script" id=1]
[ext_resource path="res://src/tests/EventBusHarnessListener.gd" type="Script" id=2]

[node name="EventBusHarness" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
script = ExtResource(1)

[node name="Margin" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0

[node name="VBox" type="VBoxContainer" parent="Margin"]
unique_name_in_owner = true
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="Margin/VBox"]
text = "Event Bus Test Harness"

[node name="Instructions" type="Label" parent="Margin/VBox"]
text = "Enter payload data for each signal and press the corresponding emit button.\nThe Test Listener logs every event below."
autowrap_mode = 3

[node name="Separator1" type="HSeparator" parent="Margin/VBox"]

[node name="EntityKilledSection" type="VBoxContainer" parent="Margin/VBox"]

[node name="EntityKilledLabel" type="Label" parent="Margin/VBox/EntityKilledSection"]
text = "entity_killed"

[node name="EntityKilledFields" type="GridContainer" parent="Margin/VBox/EntityKilledSection"]
columns = 2

[node name="EntityKilledEntityIdLabel" type="Label" parent="Margin/VBox/EntityKilledSection/EntityKilledFields"]
text = "entity_id"

[node name="EntityKilledEntityId" type="LineEdit" parent="Margin/VBox/EntityKilledSection/EntityKilledFields"]
unique_name_in_owner = true
size_flags_horizontal = 3
placeholder_text = "entity_id"

[node name="EntityKilledKillerIdLabel" type="Label" parent="Margin/VBox/EntityKilledSection/EntityKilledFields"]
text = "killer_id"

[node name="EntityKilledKillerId" type="LineEdit" parent="Margin/VBox/EntityKilledSection/EntityKilledFields"]
unique_name_in_owner = true
size_flags_horizontal = 3
placeholder_text = "killer_id"

[node name="EntityKilledEmitButton" type="Button" parent="Margin/VBox/EntityKilledSection"]
unique_name_in_owner = true
text = "Emit entity_killed"

[node name="Separator2" type="HSeparator" parent="Margin/VBox"]

[node name="ItemAcquiredSection" type="VBoxContainer" parent="Margin/VBox"]

[node name="ItemAcquiredLabel" type="Label" parent="Margin/VBox/ItemAcquiredSection"]
text = "item_acquired"

[node name="ItemAcquiredFields" type="GridContainer" parent="Margin/VBox/ItemAcquiredSection"]
columns = 2

[node name="ItemAcquiredItemIdLabel" type="Label" parent="Margin/VBox/ItemAcquiredSection/ItemAcquiredFields"]
text = "item_id"

[node name="ItemAcquiredItemId" type="LineEdit" parent="Margin/VBox/ItemAcquiredSection/ItemAcquiredFields"]
unique_name_in_owner = true
size_flags_horizontal = 3
placeholder_text = "item_id"

[node name="ItemAcquiredQuantityLabel" type="Label" parent="Margin/VBox/ItemAcquiredSection/ItemAcquiredFields"]
text = "quantity"

[node name="ItemAcquiredQuantity" type="LineEdit" parent="Margin/VBox/ItemAcquiredSection/ItemAcquiredFields"]
unique_name_in_owner = true
size_flags_horizontal = 3
placeholder_text = "quantity"

[node name="ItemAcquiredEmitButton" type="Button" parent="Margin/VBox/ItemAcquiredSection"]
unique_name_in_owner = true
text = "Emit item_acquired"

[node name="Separator3" type="HSeparator" parent="Margin/VBox"]

[node name="QuestStateChangedSection" type="VBoxContainer" parent="Margin/VBox"]

[node name="QuestStateChangedLabel" type="Label" parent="Margin/VBox/QuestStateChangedSection"]
text = "quest_state_changed"

[node name="QuestStateChangedFields" type="GridContainer" parent="Margin/VBox/QuestStateChangedSection"]
columns = 2

[node name="QuestStateChangedQuestIdLabel" type="Label" parent="Margin/VBox/QuestStateChangedSection/QuestStateChangedFields"]
text = "quest_id"

[node name="QuestStateChangedQuestId" type="LineEdit" parent="Margin/VBox/QuestStateChangedSection/QuestStateChangedFields"]
unique_name_in_owner = true
size_flags_horizontal = 3
placeholder_text = "quest_id"

[node name="QuestStateChangedStateLabel" type="Label" parent="Margin/VBox/QuestStateChangedSection/QuestStateChangedFields"]
text = "state"

[node name="QuestStateChangedState" type="LineEdit" parent="Margin/VBox/QuestStateChangedSection/QuestStateChangedFields"]
unique_name_in_owner = true
size_flags_horizontal = 3
placeholder_text = "state"

[node name="QuestStateChangedEmitButton" type="Button" parent="Margin/VBox/QuestStateChangedSection"]
unique_name_in_owner = true
text = "Emit quest_state_changed"

[node name="Separator4" type="HSeparator" parent="Margin/VBox"]

[node name="LogLabel" type="Label" parent="Margin/VBox"]
text = "Signal Log"

[node name="Log" type="RichTextLabel" parent="Margin/VBox"]
unique_name_in_owner = true
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_active = true

[node name="TestListener" type="Node" parent="."]
script = ExtResource(2)
